added script.js.txt added functionality

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
   <input type="text" name="" id="amountIn">
-  <input type="range" name="" id="tax">
-  <div id="output">
+  <input type="range" name="" id="tax" value="15">
+  <div id="outputTax">
   </div>
+  <div id="outputTotal">
+</div>
   <script src="script.js"></script>
 </body>
 
