--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <input type="text" name="" id="amountIn" type="number">
-  <input type="range" name="" id="tax" value="15" step="1" width="10vw">
+  <input type="range" name="" id="tax" value="15" step="1" width="10vw"><span id="taxValue"></span>
   <div class="info">
     <div>
       Tax:
