--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+<!--  <select name="" id="ltdk">
+    Tab to edit
+    <option value="dark">dark</option>
+    <option value="light">light</option>
+  </select>-->
   <input type="text" name="" id="amountIn" type="number">
   <input type="range" name="" id="tax" value="15" step="1" width="10vw"><span id="taxValue"></span>
   <div class="info">
